--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -28,14 +28,11 @@
  	src: url(../images/fonts/opensanshebrew-regular-webfont.woff) format('woff');
  }
 
-@color_ac_blue: #2a4191;
-@color_ac_green: #51ae43;
-@color_ac_orange: #ea7a06;
-@color_ac_black: black;
-@color_ac_text: white;
-@color_text: #7f8c8d;
-@vertical_spacing: 50px;
+@color_ac_blue: #004366;
+@color_text: white;
 
+
+@import "header.less";
 
 @import (css) "stock/header.css";
 @import (css) "stock/copyright.css";
@@ -61,7 +58,7 @@ h2,
 h3,
 h4,
 h5 {
-	color: @color_ac_blue;
+	color: @color_text;
 	font-family: 'Open Sans Hebrew', sans-serif;
 	font-weight: 400;
 }
