Site: Added contect and footer ssections

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -29,10 +29,10 @@
  }
 
 @color_ac_blue: #004366;
+@color_button: #19bb9b;
 @color_text: white;
 
-
-@import "header.less";
+@import "content.less";
 
 @import (css) "stock/header.css";
 @import (css) "stock/copyright.css";
