Site: Added version

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -28,6 +28,7 @@
  	src: url(../images/fonts/opensanshebrew-regular-webfont.woff) format('woff');
  }
 
+@color_ac_black: black;
 @color_ac_blue: #004366;
 @color_button: #19bb9b;
 @color_text: white;
