--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -13,13 +13,26 @@
  	height: 500px;
  }
 
+ header.version {
+	display: block;
+	padding: 20px calc(~'(100% - 1200px) / 2');
+	position: relative;
+	height: 500px;
+	color: @color_ac_black;
+
+	background-image: url(../images/header-background-01.jpg);
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-size: 1920px 700px;
+	min-height: 660px;
+ }
+
  header:before {
  	content: "";
  	display: inline-block;
  	vertical-align: middle;
  	height: 100%;
  }
-
 
  header article {
  	display: inline-block;
@@ -36,10 +49,19 @@
  	font-weight: 900;
  }
 
+ header.version article h1 {
+ 	color: @color_ac_black;
+ 	font-size: 3em;
+ }
+
  header article p {
  	font-weight: 700;
  	font-size: 1.3em;
  }
+
+header.version article p {
+	font-size: 1.6em;
+}
 
  header article ul {
  	margin: 0px;
@@ -78,7 +100,7 @@
   	visibility: visible;
   }
 
- section#clients {
+section#clients {
  	display: block;
  	padding-top: 20px;
  	padding-bottom: 20px;
@@ -87,18 +109,21 @@
 
  section#clients div.images_container {
  	display: block;
+ 	margin-left: auto;
+ 	margin-right: auto;
  	min-height: 135px;
  	position: relative;
  	overflow: hidden;
+ 	width: 95%;
  }
 
  section#clients div.images_container img {
  	position: absolute;
  	top: 50%;
- 	margin-top: -50px;
- 	width: 140px;
+ 	margin-top: -42.5px;
+ 	width: 120px;
  	opacity: 0;
- 	transition: all 0.3s;
+ 	transition: all 0.6s;
  }
 
  section#clients div.images_container img.visible {
@@ -116,11 +141,27 @@ section#contact {
  	background-color: @color_ac_blue;
 }
 
+header.version section#contact {
+	position: absolute;
+	top: 50%;
+	margin-top: -194px;
+	left: calc(~'(50% - 600px)');
+	width: 400px;
+	padding: 0px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
 section#contact p {
 	margin: 0px;
 	padding-bottom: 10px;
 	font-size: 1.6em;
 	font-weight: 400;
+}
+
+header.version section#contact p {
+	color: @color_text;
+	font-size: 1.3em;
 }
 
 section#contact form {
@@ -132,11 +173,50 @@ section#contact form label {
 	vertical-align: top;
 }
 
+header.version section#contact form label {
+	display: block;
+	margin-bottom: 15px;
+	position: relative;
+}
+
+header.version section#contact form label:before {
+	content: "";
+	position: absolute;
+	right: 15px;
+	top: -7px;
+	background-image: url(../images/icon-sprite.svg);
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+	background-size: 422px 32px;
+	width: 32px;
+	height: 32px;
+}
+
+header.version section#contact form label:nth-of-type(1):before {
+	background-position: 0px 0px;
+}
+
+header.version section#contact form label:nth-of-type(2):before {
+	background-position: -32px 0px;
+}
+
+header.version section#contact form label:nth-of-type(3):before {
+	background-position: -62px 0px;
+}
+
 section#contact form label span {
 	display: inline-block;
 	vertical-align: middle;
 	padding-left: 10px;
 	padding-right: 10px;
+}
+
+header.version section#contact form label span {
+	display: block;
+	padding-right: 50px;
+	padding-bottom: 5px;
+	text-align: right;
+	color: @color_text;
 }
 
 section#contact form label input {
@@ -149,6 +229,15 @@ section#contact form label input {
 	background-color: fade(@color_text,50%);
 	width: calc(~'220px - 5px');
 	transition: all 0.3s;
+}
+
+header.version section#contact form label input {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	width: calc(~'90% - 5px');
 }
 
 section#contact form label input:hover {
@@ -190,6 +279,7 @@ footer > div {
 	background-color: black;
 	text-align: center;
 }
+
 
 /**
  * Copyright
