--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -8,23 +8,11 @@
 
 header {
 	display: block;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	text-align: center;
 	position: relative;
-	height: 500px;
-}
-
-header.version {
-	display: block;
-	padding: 20px calc(~'(100% - 1200px) / 2');
-	position: relative;
-	height: 500px;
-	color: @color_ac_black;
-
-	background-image: url(../images/header-background-01.jpg);
-	background-repeat: no-repeat;
-	background-position: center top;
-	background-size: 1920px 700px;
-	min-height: 660px;
+	background-color: black;
 }
 
 header article {
@@ -32,8 +20,7 @@ header article {
 	padding-top: 10px;
 	width: 95%;
 	margin-left: auto;
-	margin-right: auto;
-	
+	margin-right: auto;	
 }
 
 header article img {
@@ -42,27 +29,23 @@ header article img {
 
 header article h1 {
 	margin: 0px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	font-size: 1.5em;
 	font-weight: 900;
 }
 
-header.version article h1 {
-	color: @color_ac_black;
-	font-size: 1.5em;
-}
-
 header article p {
 	margin: 0px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	font-weight: 700;
 	font-size: 1em;
 }
 
 header.version article p {
 	font-size: 1em;
+	color: @color_text;
 }
 
 header article ul {
@@ -70,6 +53,7 @@ header article ul {
 	padding: 0px;
 	padding-right: 20px;
 	font-weight: 700;
+	display: none;
 }
 
 header article ul  li {
@@ -86,7 +70,7 @@ header figure {
 	top: 0px;
 	left: 0px;
 	width: 100%;
-	height: 500px;
+	height: 400px;
 	opacity: 0;
 	visibility: hidden;
 	z-index: -1;
@@ -94,7 +78,7 @@ header figure {
 
 	margin: 0px;
 	background-repeat: no-repeat;
-	background-position: center top;
+	background-position: center bottom;
 	background-size: 100% auto;
 }
 
@@ -121,20 +105,10 @@ section#clients div.images_container {
 }
 
 section#clients div.images_container img {
-	position: absolute;
-	top: 50%;
-	margin-top: -42.5px;
-	width: 120px;
-	opacity: 0;
-	transition: all 0.6s;
-}
-
-section#clients div.images_container img.visible {
-	opacity: 1;
-}
-
-section#clients div.images_container img.transit {
-	transition: none;
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 section#contact {
