--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -94,6 +94,12 @@ section#clients {
 	text-align: center;
 }
 
+section#clients h2 {
+	text-align: center;
+	color: @color_ac_blue;
+	font-weight: 700;
+}
+
 section#clients div.images_container {
 	display: block;
 	margin-left: auto;
