--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -30,7 +30,7 @@
 			</header>
 			<cms:desktop>
 				<section id="clients">
-
+					<h2><cms:text constant="title_clients"/></h2>
 					<div class="images_container">
 						<cms:module
 							name="gallery"
