--- a/site/templates/home2.xml
+++ b/site/templates/home2.xml
@@ -43,7 +43,7 @@
 			</cms:mobile>
 			
 			<section id="clients">
-
+				<h2><cms:text constant="title_clients"/></h2>
 				<div class="images_container">
 					<cms:module
 						name="gallery"
